[tool.poetry]
name = "asyncoord"
version = "0.1.0"
description = "Asyncio coordinator for thread/process execution"
authors = ["iTecAI <matteovh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
